# cigar-c-cmake

./: .gitignore  CMakeLists.txt
src/: .gitignore  CMakeLists.txt  align.c  align_test.c  cigar.c  cigar_test.c  edit.c  edit_test.c  gsa.h
